src/objects/TourCampaign__c.object
<CustomObject>
    <description>Campaigns related to tours tracking digital ads, miscellaneous expenses, and production expenses and associated spend allocated to local Events</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tour Campaigns (Agency)</relationshipLabel>
        <relationshipName>AgencyforTourCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllocatedTotal__c</fullName>
        <label>Allocated Total</label>
        <summarizedField>TourCampaignAdPlan__c.AllocatedAmount__c</summarizedField>
        <summaryForeignKey>TourCampaignAdPlan__c.TourCampaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AnnouncementType__c</fullName>
        <label>Announcement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Announce</fullName>
                </value>
                <value>
                    <fullName>Presale</fullName>
                </value>
                <value>
                    <fullName>Onsale</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Production</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>National Allocation - Digital</fullName>
                </value>
                <value>
                    <fullName>Radio Streaming</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoverageSort__c</fullName>
        <formula>IF(INCLUDES(Coverage__c, &quot;Onsale&quot;), 1,
  IF(INCLUDES(Coverage__c, &quot;Maintenance&quot;), 2,
    IF(INCLUDES(Coverage__c, &quot;Closing&quot;), 3,
    4)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsale</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrencyDate__c</fullName>
        <label>Currency Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyExchange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Exchange</label>
        <referenceTo>CurrencyExchange__c</referenceTo>
        <relationshipLabel>Tour Campaigns</relationshipLabel>
        <relationshipName>Tour_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DigitalMediaTypeFormat__c</fullName>
        <label>Digital Media Type Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rich</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Native</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetAmount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonLNETourBudgetBlank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-LNE Tour Budget Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonLNETourBudget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-LNE Tour Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NonLNETourBudget__c.Tour__c</field>
                <operation>equals</operation>
                <valueField>$Source.Tour__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NonLNETourBudget__c</referenceTo>
        <relationshipLabel>Tour Campaigns</relationshipLabel>
        <relationshipName>TourCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemainingTotal__c</fullName>
        <formula>NetAmount__c -  AllocatedTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_for_Currency_Recalc__c</fullName>
        <formula>IF 
( 
ISNULL(CurrencyExchange__c), 
TRUE, 
IF 
( 
ISNULL(CurrencyDate__c), 
IF 
( 
CurrencyExchange__r.IsCurrent__c = FALSE, 
TRUE, 
FALSE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = FALSE) , 
IF 
( 
AND(CurrencyExchange__r.StartDate__c &lt;= CurrencyDate__c, CurrencyExchange__r.EndDate__c &gt;= CurrencyDate__c), 
FALSE, 
TRUE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = TRUE), 
IF 
( 
(CurrencyExchange__r.StartDate__c &gt; CurrencyDate__c) = TRUE, 
TRUE, 
FALSE 
) , 
TRUE 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled for Currency Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <label>Tour</label>
        <referenceTo>Tour__c</referenceTo>
        <relationshipLabel>Tour Campaigns</relationshipLabel>
        <relationshipName>Tour_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FBEvent - buyticketslink</fullName>
                </value>
                <value>
                    <fullName>FBEvent - description</fullName>
                </value>
                <value>
                    <fullName>FBX</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page image</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page link</fullName>
                </value>
                <value>
                    <fullName>Paid - artist page video</fullName>
                </value>
                <value>
                    <fullName>Paid - dark post</fullName>
                </value>
                <value>
                    <fullName>Paid - link post</fullName>
                </value>
                <value>
                    <fullName>Paid - Lncom</fullName>
                </value>
                <value>
                    <fullName>Paid - photo</fullName>
                </value>
                <value>
                    <fullName>Paid - promotion</fullName>
                </value>
                <value>
                    <fullName>Paid - Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Paid - text only</fullName>
                </value>
                <value>
                    <fullName>Paid - video</fullName>
                </value>
                <value>
                    <fullName>Advertising Materials Production</fullName>
                </value>
                <value>
                    <fullName>Agency Commission</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Flyer &amp; Poster Distribution</fullName>
                </value>
                <value>
                    <fullName>Flyer &amp; Poster Production</fullName>
                </value>
                <value>
                    <fullName>Graphic/Digital Design</fullName>
                </value>
                <value>
                    <fullName>National Allocation - Misc</fullName>
                </value>
                <value>
                    <fullName>Press Conference</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Tour Launch</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Rich Media</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tour Campaigns</relationshipLabel>
        <relationshipName>TourCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fxAllocatedTotal__c</fullName>
        <formula>(AllocatedTotal__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Allocated Total (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetAmount__c</fullName>
        <formula>(NetAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRemainingTotal__c</fullName>
        <formula>(RemainingTotal__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Remaining Total (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Tour Campaign</label>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Tour Campaign ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Campaigns</pluralLabel>
    <recordTypes>
        <fullName>Digital</fullName>
        <active>true</active>
        <description>Represents digital ads</description>
        <label>Digital</label>
    </recordTypes>
    <recordTypes>
        <fullName>Misc</fullName>
        <active>true</active>
        <description>Represents misc expenses</description>
        <label>Misc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Production</fullName>
        <active>true</active>
        <description>Represents production expenses</description>
        <label>Production</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>